fixed dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,17 +43,16 @@ pre {
   color: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  pre {
-    padding-top: 0px;
-    padding-bottom: 0px;
-    color: var(--color-gray-300);
-    background: var(--color-gray-800);
-  }
-  h2 {
-    color: var(--color-gray-100);
-  }
+.dark pre {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  color: var(--color-gray-300);
+  background: var(--color-gray-800);
 }
+.dark h2 {
+  color: var(--color-gray-100);
+}
+
 
 pre p {
   margin: 0px;
